# dotfile

./: .ackrc  .bashrc  .gdbinit  .gitconfig  .gitignore  .rstartup  .tmux.conf  install.sh
cpp/: .clang-format
javascript/: .eslint.json  .jshint.json  env.sh
js/: env.sh
lua/: .stylua.toml
py/: .pylintrc  dev-requirements.txt  env.sh  tasks.py
python/: .pylintrc  dev-requirements.in  dev-requirements.txt  env.sh  pyproject.toml  setup.cfg  setup.py
tmux/: editor-setup.tmux  editor-split.tmux  gdb.tmux
yaml/: .yamllint.yml  env.sh
