[project]
name = ""
description = ""
authors = [
    {name = "Cameron Wong", email="cw@reosource.io"},
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT License"}
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]

[tool.setuptools_scm]

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = [
    "setuptools.*",
    "setuptools_scm.*",
]
ignore_missing_imports = true
